--- a/create.html
+++ b/create.html
@@ -21,9 +21,12 @@
              <img class="verticle-center " src="assets/img/logo.png" width="200">
 
          </div>
-         <div class="col-6 text-center">
+         <div class="col-6 text-center"> 
+            <img class="verticle-center " src="assets/img/back.png" width="20">
              <div class="card verticle-center p-5">
-                 <h4>Teacher Login</h4>
+              
+                 <h4>Create an account</h4>
+                 <p>Verify yourself to access all the content.</p>
                  <br><br>
                 <div class="input-group">
                     <span class="codes ml-2"> 
@@ -31,11 +34,17 @@
                         <option value="1">+1</option><option value="1">+1</option><option value="1-242">+1-242</option><option value="20">+20</option><option value="212">+212</option><option value="230">+230</option><option value="233">+233</option><option value="254">+254</option><option value="260">+260</option><option value="27">+27</option><option value="32">+32</option><option value="33">+33</option><option value="34">+34</option><option value="351">+351</option><option value="354">+354</option><option value="358">+358</option><option value="36">+36</option><option value="377">+377</option><option value="39">+39</option><option value="41">+41</option><option value="43">+43</option><option value="44">+44</option><option value="45">+45</option><option value="46">+46</option><option value="47">+47</option><option value="48">+48</option><option value="49">+49</option><option value="52">+52</option><option value="54">+54</option><option value="55">+55</option><option value="56">+56</option><option value="60">+60</option><option value="61">+61</option><option value="62">+62</option><option value="63">+63</option><option value="64">+64</option><option value="65">+65</option><option value="66">+66</option><option value="7">+7</option><option value="7">+7</option><option value="81">+81</option><option value="84">+84</option><option value="855">+855</option><option value="880">+880</option><option value="90">+90</option><option value="91">+91</option><option value="92">+92</option><option value="94">+94</option><option value="95">+95</option><option value="960">+960</option><option value="965">+965</option><option value="966">+966</option><option value="968">+968</option><option value="971">+971</option><option value="972">+972</option><option value="973">+973</option><option value="974">+974</option><option value="975">+975</option><option value="977">+977</option></select>
                         </span> <input id="phone_number" type="text" class="form-control border-control" name="phone_number" placeholder="Enter Phone Number">
                         <input type="hidden" name="mobileview" id="mobileview" value="1"> 
+                        <br>
+                      
                 </div><br>
+                <div>
+                <input type="checkbox"> our <a class="color-style">“Terms & Conditions”</a> and <a class="color-style">“Privacy Policy”</a>
+                </div>
+                <br><br>
                 <button type="button" class="btn btn-primary btn-block filled-button">Request OTP</button><br>
                 <button type="button" class="btn btn-primary btn-block rim-button color-style">Login with Password</button>
                 <br><br><br>
-                New User ? <a href="" class="color-style">Create an Account</a>
+                Already have an account ? <a href="" class="color-style">Login</a>
 
              </div>
          </div>
