--- a/verify.html
+++ b/verify.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="auth">
 
  <div class="container-fluid">
      <div class="row height-100">
