alot of changes

--- a/subjects.html
+++ b/subjects.html
@@ -4,65 +4,67 @@
   <title>Login</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
+  <script src="assets/vendor/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/popper.min.js"></script>
+  <script src="assets/vendor/bootstrap/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="assets/css/teachermain.css">
   <link rel="stylesheet" href="assets/css/teachermobile.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
 </head>
 <body class="auth">
     <div class="container-fluid">
         <div class="row height-100">
-            <div class="col-lg-6 col-md-4 d-md-flex justify-content-center d-none text-center align-self-center p-0 ">
+            <div class="offset-1 col-lg-5 col-md-4 d-md-flex justify-content-center d-none text-center align-self-center p-0 ">
                 <img class="" src="assets/img/logo.png" width="200">
     
             </div>
-            <div class="d-flex align-items-center justify-content-center col-lg-6 col-md-8 col-12  p-0 text-center">
+            <div class="d-flex align-items-center justify-content-center col-lg-5 col-md-8 col-12  p-0">
                 <div class="card mobile-cover p-5 align-items-center justify-content-center">
-                    <div class="w-100 d-flex justify-content-start">
-                        <img src="assets/img/back.png" width="20px">
-                    </div>
-                 <h4>Select Subjects</h4>
-                 <p>let us know the subjects you can teach.</p>
-                 <br><br>
-                <div class="input-group subject-group">
-                    <div>
-                        <p class="sub-title text-left">Select subjects</p>
-
-                        <label class="divselect">
-                            <input type="checkbox" checked="checked">
-                            <span class="checkmark"></span>
-                            <span class="alphabet">Mathematics</span>
-                        </label>
-                        <label class="divselect">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span class="alphabet">Physics</span>
-                        </label>
-                        <label class="divselect">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span class="alphabet">Chemistry</span>
-                        </label>
-                        <label class="divselect">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span class="alphabet">Biology</span>
-                        </label>
-                        <label class="divselect">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span class="alphabet">Botany</span>
-                        </label>
-                    </div>
-                </div>
-                <br><br>
-                <button type="button" class="btn btn-primary btn-block filled-button">Continue</button><br>  
+                    <div class="card-body">
+                        <div class="w-100 d-flex justify-content-start">
+                            <img src="assets/img/back.png" width="20px">
+                        </div>
+                        <br>
+                        <img class="d-md-none d-block mb-5" src="assets/img/practicallywhite.png" alt="">
+                        <h4>Select Subjects</h4>
+                        <br>
+                        <p>let us know the subjects you can teach.</p>
+                        <br><br>
+                        <div class="input-group subject-group">
+                            <div>
+                                <p class="sub-title text-left">Select subjects</p>
     
+                                <label class="divselect">
+                                    <input type="checkbox" checked="checked">
+                                    <span class="checkmark"></span>
+                                    <span class="alphabet">Mathematics</span>
+                                </label>
+                                <label class="divselect">
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                    <span class="alphabet">Physics</span>
+                                </label>
+                                <label class="divselect">
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                    <span class="alphabet">Chemistry</span>
+                                </label>
+                                <label class="divselect">
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                    <span class="alphabet">Biology</span>
+                                </label>
+                                <label class="divselect">
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                    <span class="alphabet">Botany</span>
+                                </label>
+                            </div>
+                        </div>
+                        <br><br>
+                        <button type="button" class="btn btn-primary btn-block filled-button">Continue</button><br>
+                    </div>  
                 </div>
             </div>
         </div>
