--- a/about.html
+++ b/about.html
@@ -4,82 +4,84 @@
   <title>Login</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
+  <script src="assets/vendor/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/popper.min.js"></script>
+  <script src="assets/vendor/bootstrap/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="assets/css/teachermain.css">
   <link rel="stylesheet" href="assets/css/teachermobile.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
 </head>
 <body class="auth">
     <div class="container-fluid">
         <div class="row height-100">
-            <div class="col-lg-6 col-md-4 d-md-flex justify-content-center d-none text-center align-self-center p-0 ">
+            <div class="offset-1 col-lg-5 col-md-4 d-md-flex justify-content-center d-none text-center align-self-center p-0 ">
                 <img class="" src="assets/img/logo.png" width="200">
     
             </div>
-            <div class="d-flex align-items-center justify-content-center col-lg-6 col-md-8 col-12  p-0 text-center">
+            <div class="d-flex align-items-center justify-content-center col-lg-5 col-md-8 col-12  p-0">
                 <div class="card mobile-cover p-5 align-items-center justify-content-center">
-                <div class="w-100 d-flex justify-content-start">
-                    <img src="assets/img/back.png" width="20px">
-                </div>
-                <h4>About you</h4>
-                <p>let us know a few details about yourself.</p>
-                <br>
-                <label class="w-100 mb-5">
-                    <input id="phone_number" type="text" class="form-control border-control" placeholder=" " name="name">
-                    <span class="floating-label">Name</span>
-                </label>
-                <div class="input-group subject-group">
-                    <div class="mb-5">
-                        <p class="sub-title text-left">Select Grades you can teach.</p>
-
-                        <label class="divselect">
-                            <input type="checkbox" checked="checked">
-                            <span class="checkmark"></span>
-                            <span class="alphabet">6<sup>th</sup></span>
-                        </label>
-                        <label class="divselect">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span class="alphabet">8<sup>th</sup></span>
-                        </label>
-                        <label class="divselect">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span class="alphabet">9<sup>th</sup></span>
-                        </label>
-                        <label class="divselect">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span class="alphabet">10<sup>th</sup></span>
-                        </label>
-                        <label class="divselect">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span class="alphabet">12<sup>th</sup></span>
-                        </label>
-                        <label class="divselect">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span class="alphabet">JEE Main</span>
-                        </label>
-                        <label class="divselect">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span class="alphabet">JEE Advance</span>
-                        </label>
+                <div class="card-body">
+                    <div class="w-100 d-flex justify-content-start">
+                        <img src="assets/img/back.png" width="20px">
                     </div>
+                    <br>
+                    <img class="d-md-none d-block mb-5" src="assets/img/practicallywhite.png" alt="">
+                    <h4>About you</h4>
+                    <p>let us know a few details about yourself.</p>
+                    <br>
+                    <label class="w-100 mb-5">
+                        <input id="phone_number" type="text" class="form-control border-control" placeholder=" " name="name">
+                        <span class="floating-label">Name</span>
+                    </label>
+                    <div class="input-group subject-group">
+                        <div class="mb-5">
+                            <p class="sub-title text-left">Select Grades you can teach.</p>
+
+                            <label class="divselect">
+                                <input type="checkbox" checked="checked">
+                                <span class="checkmark"></span>
+                                <span class="alphabet">6<sup>th</sup></span>
+                            </label>
+                            <label class="divselect">
+                                <input type="checkbox">
+                                <span class="checkmark"></span>
+                                <span class="alphabet">8<sup>th</sup></span>
+                            </label>
+                            <label class="divselect">
+                                <input type="checkbox">
+                                <span class="checkmark"></span>
+                                <span class="alphabet">9<sup>th</sup></span>
+                            </label>
+                            <label class="divselect">
+                                <input type="checkbox">
+                                <span class="checkmark"></span>
+                                <span class="alphabet">10<sup>th</sup></span>
+                            </label>
+                            <label class="divselect">
+                                <input type="checkbox">
+                                <span class="checkmark"></span>
+                                <span class="alphabet">12<sup>th</sup></span>
+                            </label>
+                            <label class="divselect">
+                                <input type="checkbox">
+                                <span class="checkmark"></span>
+                                <span class="alphabet">JEE Main</span>
+                            </label>
+                            <label class="divselect">
+                                <input type="checkbox">
+                                <span class="checkmark"></span>
+                                <span class="alphabet">JEE Advance</span>
+                            </label>
+                        </div>
+                    </div>
+                    <label class="w-100">
+                        <input id="phone_number" type="text" class="form-control border-control" placeholder=" " name="school">
+                        <span class="floating-label">School</span>
+                    </label>
+                    <br><br>
+                    <button type="button" class="btn btn-primary btn-block filled-button">Continue</button><br>
                 </div>
-                <label class="w-100">
-                    <input id="phone_number" type="text" class="form-control border-control" placeholder=" " name="school">
-                    <span class="floating-label">School</span>
-                </label>
-                <br><br>
-                <button type="button" class="btn btn-primary btn-block filled-button">Continue</button><br>  
     
                 </div>
             </div>
