--- a/login.html
+++ b/login.html
@@ -4,30 +4,29 @@
   <title>Login</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
+  <script src="assets/vendor/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/popper.min.js"></script>
+  <script src="assets/vendor/bootstrap/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="assets/css/teachermain.css">
   <link rel="stylesheet" href="assets/css/teachermobile.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
 </head>
 <body class="auth">
 
  <div class="container-fluid">
      <div class="row height-100">
-         <div class="col-lg-6 col-md-4 d-md-flex justify-content-center d-none text-center align-self-center p-0 ">
+         <div class="offset-1 col-lg-5 col-md-4 d-md-flex justify-content-center d-none text-center align-self-center p-0 ">
              <img class="" src="assets/img/logo.png" width="200">
 
          </div>
-         <div class="d-flex align-items-center justify-content-center col-lg-6 col-md-8 col-12  p-0">
+         <div class="d-flex align-items-center justify-content-center col-lg-5 col-md-8 col-12  p-0">
              <div class="card mobile-cover p-5 align-items-center justify-content-center">
                  <div class="card-body">
+                    <img class="d-md-none d-block mb-5" src="assets/img/practicallywhite.png" alt="">
                     <h4>Teacher Login</h4>
-                    <br><br>
-                   <div class="input-group">
+                    <br>
+                   <div class="input-group flex-nowrap">
                        <span class="codes ml-2"> 
                            <select class="form-control style-input country_code border-control" name="country_code" id="country_code" style="padding:0px;">
                                <option value="1">+1</option><option value="1">+1</option><option value="1-242">+1-242</option><option value="20">+20</option><option value="212">+212</option><option value="230">+230</option><option value="233">+233</option><option value="254">+254</option><option value="260">+260</option><option value="27">+27</option><option value="32">+32</option><option value="33">+33</option><option value="34">+34</option><option value="351">+351</option><option value="354">+354</option><option value="358">+358</option><option value="36">+36</option><option value="377">+377</option><option value="39">+39</option><option value="41">+41</option><option value="43">+43</option><option value="44">+44</option><option value="45">+45</option><option value="46">+46</option><option value="47">+47</option><option value="48">+48</option><option value="49">+49</option><option value="52">+52</option><option value="54">+54</option><option value="55">+55</option><option value="56">+56</option><option value="60">+60</option><option value="61">+61</option><option value="62">+62</option><option value="63">+63</option><option value="64">+64</option><option value="65">+65</option><option value="66">+66</option><option value="7">+7</option><option value="7">+7</option><option value="81">+81</option><option value="84">+84</option><option value="855">+855</option><option value="880">+880</option><option value="90">+90</option><option value="91" selected>+91</option><option value="92">+92</option><option value="94">+94</option><option value="95">+95</option><option value="960">+960</option><option value="965">+965</option><option value="966">+966</option><option value="968">+968</option><option value="971">+971</option><option value="972">+972</option><option value="973">+973</option><option value="974">+974</option><option value="975">+975</option><option value="977">+977</option>
@@ -42,7 +41,7 @@
                    <button type="button" class="btn btn-primary btn-block filled-button">Request OTP</button><br>
                    <button type="button" class="btn btn-primary btn-block rim-button color-style">Login with Password</button>
                    <br><br><br>
-                   New User ? <a href="" class="color-style">Create an Account</a>
+                   <h6>New User ? <a href="" class="color-style">Create an Account</a></h6>
                  </div>
 
              </div>
